# lang

./: .gitignore  README.md  dune-project  flake.nix  lang.opam
.github/workflows/: test.yml
examples/: test.lng
guides/: SYNTAX.md
src/: dune
src/lib/: ast.ml  ast.mli  dune  grammar.mly  lexer.ml  lexer.mli  parser.mly
test/: dune
